# 88deobfuscator

./: .gitignore  README.md  pyproject.toml
src/alldecoder/: main.py
src/alldecoder/core/: abstract_decoder.py  code_executor.py  config.py  file_manager.py  menu.py  pattern_matcher.py
src/alldecoder/decoders/: __init__.py  abstract_decoder.py  baseX_compression_decoder.py  baseX_decoder.py  blank_decoder.py  christian_decoder.py  christian_obf_decoder.py  clever_decoder.py  compression_decoder.py  grandiosee_decoder.py  impostor_decoder.py  ne4to_obf_decoder.py  rendy_decoder.py  sencode_decoder.py  xindex_decoder.py
src/alldecoder/testfiles/: b64_enc.py  b64_zlib.py  b64_zlib_enc.py  decoded_b64_enc.py  encode.py  rendy_enc.py  zlib__enc.py
src/alldecoder/testfiles/BlankObf/: blank_enc.py  decoded_blank_enc.py  decoded_test_enc.py
src/alldecoder/testfiles/christian/: decoded_encoded_test.py  encoded_test.py
src/alldecoder/ui/: __init__.py  input.py  output.py
src/alldecoder/utils/: define_obf.py
