[project]
name = "alldecoder7"
version = "0.7.0"
description = "Python скрипт, созданный для деобфускации различных программ, защищенных с помощью популярных обфускаций."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "ruff>=0.12.3",
]

[tool.ruff]
extend-exclude = [
    "testfiles/",
]
